--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,7 +1,13 @@
 {
-  "indent_size": 4,
-  "indent_char": " ",
-  "css": {
-    "indent_size": 2
-  }
+    "beautify.language": {
+        "js": {
+            "type": ["javascript", "json","typescript"],
+            "filename": [".jshintrc", ".jsbeautifyrc"],
+            "ext": ["js", "json", "ts"]
+            // ^^ to set extensions to be beautified using the javascript beautifier
+        },
+        "css": ["css", "scss"],
+        "html": ["htm", "html"]
+        // ^^ providing just an array sets the VS Code file type
+    }
 }
